# poisson-irregular-cartesian

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test_array2d.cpp  test_finitedifference2d.cpp  test_grid2d.cpp
src/: Array2D.h  FiniteDifference2D.h  Grid2D.h  grid2D.h
tests/: test_array2d.cpp  test_finitedifference2d.cpp  test_grid2d.cpp
